tests/integration/security/policy_constraint/testdata/authz-mesh-default-deny.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mesh-default-deny
  namespace: istio-system
spec:
  action: ALLOW
